--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -196,7 +196,7 @@ widgets:
           round_corners: True
           round_corners_type: 'normal'
           border_color: 'white'
-          alignment: 'center'
+          alignment: 'left'
           direction: 'down'
           offset_top: 6
           offset_left: 0
@@ -209,12 +209,12 @@ widgets:
       gradient: 1
       reverse: 0
       foreground: "#89b4fa"
-      gradient_color_1: "#88c0d0"
-      gradient_color_2: "#88c0d0"
-      gradient_color_3: "#88c0d0"
+      gradient_color_1: "#ffaabf"
+      gradient_color_2: "#ffaabf"
+      gradient_color_3: "#ffffff"
       bars_number: 8
       bar_spacing: 2
-      bar_width: 4
+      bar_width: 8
       sleep_timer: 2
       hide_empty: false
       container_padding:
